--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,5 +34,13 @@ jobs:
         with:
           go-version: "1.23.0"
 
+      - name: Setup staticcheck
+        uses: dominikh/staticcheck-action@v1
+        with:
+          version: "latest"
+
       - name: Check for formatting issues
         run: test -z $(go fmt ./...)
+
+      - name: Check for Linting issues
+        run: staticcheck ./...
