--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -21,4 +21,14 @@ jobs:
       - name: Build the application
         run: ./scripts/buildprod.sh
 
+      - name: auth
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: ${{ secrets.GCP_CREDENTIALS }}
+
+      - name: Set up Cloud SDK
+        uses: google-github-actions/setup-gcloud@v2
+      
+      - name: Build & Push Docker Image
+        run: gcloud builds submit --tag us-central1-docker.pkg.dev/omega-wind-469807-f2/notely-ar-repo/notely:latest .
       
