--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -18,6 +18,9 @@ jobs:
         with:
           go-version: "1.23.0"
 
+      - name: Setup Goose
+        run: go install github.com/pressly/goose/v3/cmd/goose@latest      
+
       - name: Build the application
         run: ./scripts/buildprod.sh
 
@@ -32,6 +35,17 @@ jobs:
       - name: Build & Push Docker Image
         run: gcloud builds submit --tag us-central1-docker.pkg.dev/omega-wind-469807-f2/notely-ar-repo/notely:latest .
 
+      - name: Run Migrations
+        run: ./scripts/migrateup.sh
+
       - name: Deploy to Cloud Run
         run: gcloud run deploy notely --image us-central1-docker.pkg.dev/omega-wind-469807-f2/notely-ar-repo/notely:latest --region us-central1 --allow-unauthenticated --project omega-wind-469807-f2 --max-instances=4
       
+jobs:
+  deploy:
+    name: Deploy
+    runs-on: ubuntu-latest
+
+    # This part
+    env:
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
